--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "whitney";
-  src: url("../../fonts/whitneylight.woff") format("woff");
+  src: url('../../fonts/whitneylight.woff') format("woff");
   font-weight: 300;
 }
 @font-face {
   font-family: "whitney";
-  src: url("../../fonts/whitneybook.woff") format("woff");
+  src: url('../../fonts/whitneybook.woff') format("woff");
   font-weight: 400;
 }
 @font-face {
   font-family: "whitney";
-  src: url("../../fonts/whitneybold.woff") format("woff");
+  src: url('../fonts/whitneybold.woff') format("woff");
   font-weight: 800;
 }
 :root {
@@ -42,7 +42,6 @@
   --page-gutter: 2.4rem;
   --whitney-font: "whitney", "Helvetica", sans-serif;
 }
-
 @media screen and (min-width: 48em) {
   :root {
     --number-of-columns: 8;
@@ -54,6 +53,7 @@
     --number-of-columns: 12;
   }
 }
+
 *,
 *::before,
 *::after {
@@ -99,25 +99,132 @@ button {
 .adaptive-font {
   text-align: center;
 }
-
 .adaptive-font--medium {
   font-size: var(--font-size-medium);
   line-height: 140%;
 }
-
 .adaptive-font--large {
   font-size: var(--font-size-large);
+}
+
+.btn {
+  border-radius: 4rem;
+  cursor: pointer;
+  transition-property: background-color, box-shadow, color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+.btn:hover {
+  box-shadow: 0 0.8rem 1.5rem rgba(0, 0, 0, 0.2);
+}
+.btn--action {
+  display: inline-flex;
+  align-items: center;
+}
+.btn--light {
+  background-color: var(--light-color);
+  color: var(--dark-color);
+}
+.btn--light:hover {
+  color: var(--brand-color);
+}
+.btn--small {
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  font-weight: 400;
+  margin-right: 1.6rem;
+  padding: 0.7rem 1.6rem;
+}
+.btn--brand {
+  display: flex;
+  justify-content: center;
+  background-color: var(--brand-color);
+  margin-right: 0;
+}
+.btn--brand:hover {
+  background-color: #7983f5;
+}
+.btn__icon {
+  margin-right: 0.8rem;
+}
+.btn--large {
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  border-radius: 2.8rem;
+}
+.btn--dark {
+  background-color: var(--dark-color);
+}
+.btn--dark:hover {
+  background-color: #36393f;
+}
+.btn--close {
+  position: absolute;
+  top: 2.4rem;
+  right: 2.4rem;
+  margin: -0.8rem;
+  padding: 0.8rem;
+  z-index: 999;
+}
+@media screen and (min-width: 64em) {
+  .btn--small {
+    margin-right: 0;
+  }
+  :is(.btn--open, .btn--close) {
+    display: none;
+  }
+}
+
+.btn-group {
+  margin-top: 4rem;
+}
+.btn-group-btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2.4rem;
+  font-weight: 400;
+}
+.btn-group-btn-pill {
+  background-color: var(--brand-color);
+  border-radius: 2.4rem;
+  padding-inline: 0.8rem;
+  margin-left: 1rem;
+  font-size: 1.2rem;
+  line-height: 2.4rem;
+  font-weight: 300;
+}
+@media screen and (min-width: 48em) {
+  .btn-group {
+    display: flex;
+  }
+  .btn-group-btn:first-child {
+    margin-right: 4rem;
+  }
+}
+
+.container {
+  max-width: 126rem;
+  margin-inline: auto;
+  padding-inline: var(--page-gutter);
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(var(--number-of-columns), 1fr);
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+.row > * {
+  grid-column: span var(--number-of-columns);
 }
 
 .background {
   position: relative;
   background-image: linear-gradient(90deg, #b473f5, #e292aa);
 }
-
 .background__video {
   display: none;
 }
-
 @media screen and (min-width: 64em) {
   .background {
     background: transparent;
@@ -146,33 +253,29 @@ button {
     min-height: 130%;
   }
 }
+
 .showcase {
   padding-top: 5.6rem;
   padding-bottom: 11.2rem;
   overflow-x: hidden;
 }
-
 .showcase__images {
   position: relative;
 }
-
 .showcase__images-wumpus {
   position: absolute;
   left: 50%;
   transform: translateX(1.2rem);
   width: 25rem;
 }
-
 .showcase__images-nitro {
   width: 30rem;
   margin-top: 15.2rem;
   margin-inline: auto;
 }
-
 .showcase__paragraph {
   margin-top: 4rem;
 }
-
 @media screen and (min-width: 48em) {
   .showcase {
     padding-top: 8rem;
@@ -207,29 +310,26 @@ button {
     grid-column: 1/span 6;
   }
 }
+
 .nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 8rem;
 }
-
 .nav__logo-image {
   display: block;
 }
-
 .nav__btn-group {
   display: flex;
   align-items: center;
 }
-
 .nav__backdrop {
   position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 997;
 }
-
 .nav__menu {
   position: fixed;
   top: 0;
@@ -243,19 +343,16 @@ button {
   padding: 2.4rem 4.8rem 12rem 2.4rem;
   transform: translateX(33rem);
 }
-
 .nav__menu--active {
   transform: translateX(0);
   transition: transform 0.15s;
 }
-
 .nav__menu-divider {
   height: 1px;
   background-color: #ebedef;
   margin-top: 2.4rem;
   margin-bottom: 1.6rem;
 }
-
 .nav__menu-footer {
   position: absolute;
   left: 0;
@@ -263,18 +360,15 @@ button {
   bottom: 0;
   padding: 2.4rem;
 }
-
 .nav__list {
   display: flex;
   flex-direction: column;
 }
-
 .nav__list-link {
   display: block;
   padding: 0.8rem 1.6rem;
   color: var(--dark-color);
 }
-
 @media screen and (min-width: 64em) {
   .nav__menu {
     position: initial;
@@ -300,89 +394,72 @@ button {
     text-decoration: underline;
   }
 }
+
 .benefits {
   padding-top: 5.6rem;
   padding-bottom: 3.2rem;
 }
-
 .benefits__heading {
   color: var(--dark-color);
 }
-
 .benefits__title {
   font-weight: 800;
   line-height: 95%;
   text-transform: uppercase;
 }
-
 .benefits__subtitle {
   margin-top: 2.4rem;
 }
-
 .benefits__cards {
   gap: 2rem;
   margin-top: 5.6rem;
 }
-
 .benefits__card {
   padding: 3.2rem;
   border-radius: 0.8rem;
   text-align: center;
 }
-
 .benefits__card-title {
   font-weight: normal;
 }
-
 .benefits__card-description {
   line-height: 2.4rem;
   margin-top: 1.2rem;
 }
-
 .benefits__card-image {
   margin-top: 2rem;
   margin-inline: auto;
 }
-
 .benefits__card:nth-child(1) {
   background: var(--card-gradient-1);
 }
-
 .benefits__card:nth-child(2) {
   background: var(--card-gradient-2);
 }
-
 .benefits__card:nth-child(3) {
   background: var(--card-gradient-3);
 }
-
 .benefits__card:nth-child(4) {
   background: var(--card-gradient-4);
 }
-
 .benefits__card:nth-child(5) {
   background: var(--card-gradient-5);
 }
-
 .benefits__card:nth-child(6) {
   background: var(--card-gradient-6);
 }
-
 .benefits__card:nth-child(5) img, .benefits__card:nth-child(6) img {
   width: 17.7rem;
   height: 11.6rem;
 }
-
 .benefits__footer {
   padding-top: 5.6rem;
 }
-
 .benefits__footer-title {
   font-size: clamp(1.8rem, 3vw, 3.2rem);
   line-height: 120%;
   color: var(--dark-color);
 }
-
 @media screen and (min-width: 48em) {
   .benefits {
     padding-top: 8rem;
@@ -421,129 +498,4 @@ button {
   .benefits__footer .btn {
     width: 38rem;
   }
-}
-.btn {
-  border-radius: 4rem;
-  cursor: pointer;
-  transition-property: background-color, box-shadow, color;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in-out;
-}
-
-.btn:hover {
-  box-shadow: 0 0.8rem 1.5rem rgba(0, 0, 0, 0.2);
-}
-
-.btn--action {
-  display: inline-flex;
-  align-items: center;
-}
-
-.btn--light {
-  background-color: var(--light-color);
-  color: var(--dark-color);
-}
-
-.btn--light:hover {
-  color: var(--brand-color);
-}
-
-.btn--small {
-  font-size: 1.4rem;
-  line-height: 2.4rem;
-  font-weight: 400;
-  margin-right: 1.6rem;
-  padding: 0.7rem 1.6rem;
-}
-
-.btn--brand {
-  display: flex;
-  justify-content: center;
-  background-color: var(--brand-color);
-  margin-right: 0;
-}
-
-.btn--brand:hover {
-  background-color: #7983f5;
-}
-
-.btn__icon {
-  margin-right: 0.8rem;
-}
-
-.btn--large {
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  border-radius: 2.8rem;
-}
-
-.btn--dark {
-  background-color: var(--dark-color);
-}
-
-.btn--dark:hover {
-  background-color: #36393f;
-}
-
-.btn--close {
-  position: absolute;
-  top: 2.4rem;
-  right: 2.4rem;
-  margin: -0.8rem;
-  padding: 0.8rem;
-  z-index: 999;
-}
-
-@media screen and (min-width: 64em) {
-  .btn--small {
-    margin-right: 0;
-  }
-  :is(.btn--open, .btn--close) {
-    display: none;
-  }
-}
-.btn-group {
-  margin-top: 4rem;
-}
-
-.btn-group-btn {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 2.4rem;
-  font-weight: 400;
-}
-
-.btn-group-btn-pill {
-  background-color: var(--brand-color);
-  border-radius: 2.4rem;
-  padding-inline: 0.8rem;
-  margin-left: 1rem;
-  font-size: 1.2rem;
-  line-height: 2.4rem;
-  font-weight: 300;
-}
-
-@media screen and (min-width: 48em) {
-  .btn-group {
-    display: flex;
-  }
-  .btn-group-btn:first-child {
-    margin-right: 4rem;
-  }
-}
-.container {
-  max-width: 126rem;
-  margin-inline: auto;
-  padding-inline: var(--page-gutter);
-}
-
-.row {
-  display: grid;
-  grid-template-columns: repeat(var(--number-of-columns), 1fr);
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
-}
-
-.row > * {
-  grid-column: span var(--number-of-columns);
 }/*# sourceMappingURL=styles.css.map */
