Pushing all files to git

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "whitney";
-  src: url('../../fonts/whitneylight.woff') format("woff");
+  src: url("../../fonts/whitneylight.woff") format("woff");
   font-weight: 300;
 }
 @font-face {
   font-family: "whitney";
-  src: url('../../fonts/whitneybook.woff') format("woff");
+  src: url("../../fonts/whitneybook.woff") format("woff");
   font-weight: 400;
 }
 @font-face {
   font-family: "whitney";
-  src: url('../fonts/whitneybold.woff') format("woff");
+  src: url("../../fonts/whitneybold.woff") format("woff");
   font-weight: 800;
 }
 :root {
@@ -497,5 +497,112 @@ button {
   }
   .benefits__footer .btn {
     width: 38rem;
+  }
+}
+
+.nitro-classic {
+  padding-block: 5.6rem;
+  background-color: #7289da;
+}
+.nitro-classic__image {
+  width: 20rem;
+}
+.nitro-classic__paragraph {
+  text-align: left;
+  margin-top: 2.4rem;
+  line-height: 1.625;
+}
+.nitro-classic__btn-group {
+  margin-top: 3.2rem;
+}
+@media screen and (min-width: 48em) {
+  .nitro-classic {
+    padding-block: 8rem;
+  }
+  .nitro-classic__content {
+    grid-column: 1/span 6;
+  }
+}
+@media screen and (min-width: 64em) {
+  .nitro-classic {
+    padding-top: 12rem;
+    padding-bottom: 15rem;
+  }
+  .nitro-classic__content {
+    grid-column: 7/span 6;
+  }
+}
+
+.footer {
+  background-color: var(--dark-color);
+  padding-top: 8rem;
+  padding-bottom: 6.4rem;
+}
+.footer__info {
+  grid-column: span 3;
+  margin-bottom: 5.6rem;
+}
+.footer__info-title {
+  font-size: 3.2rem;
+  text-transform: uppercase;
+  color: var(--brand-color);
+}
+.footer__info-languages {
+  margin-block: 2.4rem;
+  display: flex;
+  align-items: center;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+.footer__info-languages img {
+  width: 2.4rem;
+}
+.footer__info-languages span {
+  margin-inline: 0.8rem;
+}
+.footer__info-socials {
+  font-size: 2.4rem;
+  margin-right: 2.4rem;
+}
+.footer__spacer {
+  display: none;
+}
+.footer__group {
+  grid-column: span 2;
+  margin-bottom: 4rem;
+  line-height: 2.4rem;
+}
+.footer__group-title {
+  padding-top: 0.8rem;
+  font-size: inherit;
+  color: var(--brand-color);
+  font-weight: 400;
+}
+.footer__group-link {
+  display: block;
+  margin-top: 0.8rem;
+}
+.footer__group-link:hover {
+  text-decoration: underline;
+}
+.footer__divider {
+  grid-column: 1/-1;
+  height: 1px;
+  background-color: var(--brand-color);
+  margin-bottom: 3.2rem;
+}
+.footer__misc {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (min-width: 48em) {
+  .footer__info {
+    grid-row-end: span 2;
+  }
+  .footer__spacer {
+    display: block;
+    grid-column: span 1;
+    grid-row: span 2;
   }
 }/*# sourceMappingURL=styles.css.map */
