--- a/assets/scss/abstracts/_fonts.scss
+++ b/assets/scss/abstracts/_fonts.scss
@@ -1,17 +1,17 @@
 @font-face {
   font-family: 'whitney';
-  src: url('../../fonts/whitneylight.woff') format('woff');
+  src: url('/assets/fonts/whitneylight.woff') format('woff');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'whitney';
-  src: url('../../fonts/whitneybook.woff') format('woff');
+  src: url('/assets/fonts/whitneybook.woff') format('woff');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'whitney';
-  src: url('../../fonts/whitneybold.woff') format('woff');
+  src: url('/assets/fonts/whitneybold.woff') format('woff');
   font-weight: 800;
 }
