--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,18 +1,18 @@
-@font-face {
+/* @font-face {
   font-family: "whitney";
-  src: url("../../fonts/whitneylight.woff") format("woff");
+  src: url("../fonts/whitneylight.woff") format("woff");
   font-weight: 300;
 }
 @font-face {
   font-family: "whitney";
-  src: url("../../fonts/whitneybook.woff") format("woff");
+  src: url("../fonts/whitneybook.woff") format("woff");
   font-weight: 400;
 }
 @font-face {
   font-family: "whitney";
-  src: url("../../fonts/whitneybold.woff") format("woff");
+  src: url("../fonts/whitneybold.woff") format("woff");
   font-weight: 800;
-}
+} */
 :root {
   --light-color: #fff;
   --dark-color: #23272a;
@@ -67,7 +67,7 @@ html {
 }
 
 body {
-  font-family: var(--whitney-font);
+  font-family: Arial, Helvetica, sans-serif;
   font-size: var(--font-size-normal);
   line-height: 1.15;
   color: var(--light-color);
